--- a/style.css/style.css
+++ b/style.css/style.css
@@ -1,5 +1,12 @@
+body {
+    width: max-content;
+}
+
 .form {
 margin: 15px;
 padding: 10px;
 background-color: yellow;
+}
+.title {
+    background-color: aquamarine;
 }
