--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@ body {
     width: 100%;
     margin: 30px;
     padding: 30px;
+    background-image: url(bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 form {
