--- a/style.css
+++ b/style.css
@@ -4,6 +4,6 @@ body {
     background-image: url(bg.jpg);
     background-repeat: no-repeat;
 }
-.title {
-padding-left: 50%;
+main {
+padding-left: 60%;
 }
