--- a/style.css
+++ b/style.css
@@ -5,5 +5,9 @@ body {
     background-repeat: no-repeat;
 }
 main {
-padding-left: 60%;
+padding-left: 55%;
+}
+nav {
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
