--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ nav {
     margin-bottom: 30px;
 }
 button {
+    width: 50px;
+    height: 20px;
 margin-left: 55%;
 margin-top: 50px;
 background-color: rgb(7, 118, 209);
