--- a/style.css
+++ b/style.css
@@ -12,9 +12,13 @@ nav {
     margin-bottom: 30px;
 }
 button {
-    width: 50px;
-    height: 20px;
+    width: 150px;
+    height: 50px;
 margin-left: 55%;
 margin-top: 50px;
 background-color: rgb(7, 118, 209);
+}
+from.up {
+    width: 150px;
+    height: 70px;
 }
