--- a/style.css
+++ b/style.css
@@ -12,13 +12,16 @@ nav {
     margin-bottom: 30px;
 }
 button {
-    width: 150px;
-    height: 50px;
+    width: 180px;
+    height: 40px;
 margin-left: 55%;
 margin-top: 50px;
 background-color: rgb(7, 118, 209);
 }
-from.up {
+.up {
     width: 150px;
     height: 70px;
+}
+.line {
+    text-align: justify;
 }
